<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".controller.SkillActivity">

    <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp" app:srcCompat="@drawable/beginnerballerbg"
            android:id="@+id/imageBgSkillPage"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:scaleType="centerCrop" android:contentDescription="@string/background_image"/>
    <ImageView
            android:layout_width="90dp"
            android:layout_height="30dp" app:srcCompat="@drawable/swooshlogo"
            android:id="@+id/imageLogo"
            android:scaleType="fitCenter"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.498"
            android:layout_marginTop="24dp" app:layout_constraintTop_toTopOf="@+id/imageBgSkillPage"
            android:contentDescription="@string/app_name"/>
    <TextView
            android:text="@string/i_am_a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textIam"
            android:textColor="@android:color/background_light" android:fontFamily="@font/montserrat"
            android:textSize="18sp"
            android:layout_marginTop="64dp"
            app:layout_constraintTop_toBottomOf="@+id/imageLogo" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"/>
    <Button
            android:text="@string/finish"
            android:layout_width="0dp"
            android:layout_height="60dp" android:id="@+id/buttonFinish"
            android:textSize="18sp"
            android:fontFamily="@font/montserrat" android:textColor="@android:color/background_light"
            android:background="@drawable/swoosh_btn" android:textAllCaps="true"
            android:layout_marginBottom="24dp" app:layout_constraintBottom_toBottomOf="@+id/imageBgSkillPage"
            android:layout_marginStart="16dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="16dp" app:layout_constraintEnd_toEndOf="parent"
            android:onClick="onSkillFinishClicked"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="48dp"
            app:layout_constraintTop_toBottomOf="@+id/textIam">
        <ToggleButton
                android:text="@string/begginer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/begginerButton" android:layout_weight="1"
                android:background="@drawable/swoosh_toggle" android:textColor="@android:color/background_light"
                android:textOff="@string/begginer" android:textOn="@string/begginer" tools:text="Begginer"
                android:layout_marginEnd="16dp" android:onClick="onBegginerClicked"/>
        <ToggleButton
                android:text="@string/baller"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/ballerButton" android:layout_weight="1"
                android:background="@drawable/swoosh_toggle" android:textColor="@android:color/background_light"
                android:textOff="@string/baller" android:textOn="@string/baller" tools:text="Baller" android:layout_marginStart="16dp"
                android:onClick="onBallerClicked"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>